# JSCRM-25 FE Edit Group Form
feature(backend): Add GET group/group icon
