# backend/src/main/java/com/jurassic/jurassiccrm/group/controller/GroupController.java
@@ -1,5 +1,6 @@
 package com.jurassic.jurassiccrm.group.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jurassic.jurassiccrm.accesscontroll.model.Group;
 import com.jurassic.jurassiccrm.accesscontroll.model.JurassicUserDetails;
 import com.jurassic.jurassiccrm.accesscontroll.service.GroupService;
@@ -12,17 +13,21 @@ import com.jurassic.jurassiccrm.logging.model.LogActionType;
 import com.jurassic.jurassiccrm.logging.service.LogService;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiResponse;
 import lombok.val;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 import springfox.documentation.annotations.ApiIgnore;
 
 import javax.validation.Valid;
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
@@ -48,6 +53,22 @@ public class GroupController {
     public ResponseEntity<List<UserOutputTO>> getAvailableUsers() {
         val dtoList = groupService.getAvailableUsers().stream().map(UserOutputTO::fromUser).collect(Collectors.toList());
         return ResponseEntity.ok(dtoList);
+    }
+
+    @GetMapping("/{id}")
+    @ApiOperation(value = "get group info", nickname = "getGroup")
+    public ResponseEntity<GroupOutputTO> getGroup(@PathVariable("id") Long id) {
+        Group group = groupService.getGroup(id);
+
+        return ResponseEntity.ok(GroupOutputTO.fromGroup(group));
+    }
+
+    @GetMapping(value = "/{id}/icon", produces = {"image/png", "image/jpeg"}, consumes = {"text/plain", "application/json"})
+    @ApiOperation(value = "get group icon", nickname = "getGroupIcon", produces = "image/*")
+    public ResponseEntity<byte[]> getGroupIcon(@PathVariable("id") Long id) {
+        Group group = groupService.getGroup(id);
+
+        return ResponseEntity.ok(group.getAvatar());
     }
 
     @PostMapping(value = "/{groupId}/user")
